tests/beta-arithmetic.m31.ref
Constant N is declared.
Constant Z is declared.
Constant S is declared.
Constant plus is declared.
Constant plus_Z is declared.
Constant plus_S is declared.
Constant times is declared.
Constant times_Z is declared.
Constant times_S is declared.
one is defined.
two is defined.
three is defined.
four is defined.
five is defined.
ten is defined.
⊢ refl ((plus (S (S (S (S (S Z)))))) (S (S (S (S Z)))))
  : (plus (S (S (S (S Z))))) (S (S (S (S (S Z)))))
      ≡ (plus ((plus (S (S Z))) (S (S (S Z))))) (S (S (S (S Z))))
The command failed with error:
File "./beta-arithmetic.m31", line 29, characters 5-14: Typing error
  failed to check that the term S (S (S Z)) is equal to
  (plus (S Z)) ((plus (S Z)) (S Z))
The command failed with error:
File "./beta-arithmetic.m31", line 36, characters 5-13: Typing error
  failed to check that the term S (S (S (S Z))) is equal to
  (times (S (S Z))) (S (S Z))
